fixing art stretching

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -301,10 +301,12 @@ body {
         .artistart {
             width: 100%;
             display: flex;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
 
             .art {
-                width: 20%;
+                width: 25%;
+                padding: 10px;
+                align-self: flex-start;
             }
         }
     }
